--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Split.js デモ</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,9 +24,9 @@
 
                 <!--カルーセル画像-->
                 <div class="col siema">
-                    <div><img src="siema-pink.svg" alt="Siema Pink" /></div>
-                    <div><img src="siema-yellow.svg" alt="Siema Yellow" /></div>
-                    <div><img src="siema-green.svg" alt="Siema Green" /></div>
+                    <img src="siema-pink.svg" alt="Siema Pink" />
+                    <img src="siema-yellow.svg" alt="Siema Yellow" />
+                    <img src="siema-green.svg" alt="Siema Green" />
                 </div>
 
                 <!-- 右矢印画像 -->
